feat: update oracle document manager
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>